mobile opening guage 中央寄せ処理

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -43,7 +43,7 @@
       </defs>
     </svg>
     <div class="lp-loading js-loading">
-      <div class="lp-loading_wrap">
+      <div class="lp-loading_wrap js-loadingWrap">
         <div class="lp-loadingInner">
           <div class="lp-loadingInner_item mod-item1 js-progressGauge js-scaleItem"></div>
           <div class="lp-loadingInner_item mod-item2 js-scaleItem"></div>
