--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -133,7 +133,7 @@
     </div>
     <main>
       <section class="lp-kv js-kv">
-        <ul class="lp-kv_characters js-charaList">
+        <ul class="lp-kv_characters js-charaList add-step1">
           <li class="lp-character mod-item3 mod-displayNone_smallDesktop">
             <div class="lp-character_inner"></div>
           </li>
