mobile loop ほぼ完了

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -132,7 +132,7 @@
       </div>
     </div>
     <main>
-      <section class="lp-kv js-kv">
+      <section class="lp-kv js-kv is-onScreenItem">
         <ul class="lp-kv_characters js-charaList add-step1">
           <li class="lp-character mod-item3 mod-displayNone_smallDesktop">
             <div class="lp-character_inner"></div>
