--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -171,7 +171,7 @@
       <section class="lp-summery">
         <div class="lp-summery_heading">
           <div class="lp-summery_headingInner">
-            <h2><img src="/data/hidari-kikino-eren/images/summary_title.png" alt=""></h2>
+            <h2 class="lp-summery_title"><img src="/data/hidari-kikino-eren/images/summary_title.png" alt=""></h2>
             <div class="lp-summery_headingDesc">
               <p class="lp-summery_descLine">目黒広告社の朝倉CDのもとに、</p>
               <p class="lp-summery_descLine">日本を代表するアイウエアカンパニーJINSから、</p>
