--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -42,7 +42,7 @@
 				</symbol>
 			</defs>
 		</svg>
-		<div class="lp-loading js-loading">
+		<div class="lp-loading js-loading" id="scroll-to-div-id-anchor">
 			<div class="lp-loading_wrap js-loadingWrap">
 				<div class="lp-loadingInner">
 					<div class="lp-loadingInner_item mod-item1 js-progressGauge js-scaleItem"></div>
@@ -169,7 +169,7 @@
 			</section>
 
 			<section class="lp-summery">
-				<div class="lp-summery_heading">
+				<div class="lp-summery_heading js-fadeIn">
 					<div class="lp-summery_headingInner">
 						<h2 class="lp-summery_title"><img src="/data/hidari-kikino-eren/images/summary_title.png" alt=""></h2>
 						<div class="lp-summery_headingDesc">
@@ -274,7 +274,7 @@
 					<div class="bgItem mod-top"></div>
 					<div class="bgItem mod-bottom"></div>
 				</div>
-				<div class="lp-result_inner js-result">
+				<div class="lp-result_inner js-fadeIn">
 					<h2 class="lp-resultTitle">
 						<span class="lp-resultTitle_inner"><img src="/data/hidari-kikino-eren/images/result_title1.png" alt=""></span>
 						<span class="lp-resultTitle_inner"><img src="/data/hidari-kikino-eren/images/result_title2.png" alt=""></span>
