--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -132,7 +132,7 @@
 			</div>
 		</div>
 		<main>
-			<section class="lp-kv js-kv is-onScreenItem">
+			<section class="lp-kv js-kv js-fadeIn is-onScreenItem">
 				<ul class="lp-kv_characters js-charaList is-step1">
 					<li class="lp-character mod-item3 mod-displayNone_smallDesktop">
 						<div class="lp-character_inner"></div>
@@ -183,7 +183,7 @@
 							<p class="lp-summery_descLine">広告では表現できないことも多い。</p>
 							<p class="lp-summery_descLine mod-displayNone_smallDesktop">混迷を極める状況のなか、</p>
 							<p class="lp-summery_descLine mod-displayNone_smallDesktop">二つのチームが出した企画とはー。</p>
-							<p class="lp-summery_descLine mod-displayNone_mobile" >混迷を極める状況のなか、二つのチームが出した企画とはー。</p>
+							<p class="lp-summery_descLine mod-displayNone_mobile mod-aiueo">混迷を極める状況のなか、二つのチームが出した企画とはー。</p>
 						</div>
 					</div>
 				</div>
@@ -276,8 +276,9 @@
 				</div>
 				<div class="lp-result_inner js-fadeIn">
 					<h2 class="lp-resultTitle">
-						<span class="lp-resultTitle_inner"><img src="/data/hidari-kikino-eren/images/result_title1.png" alt=""></span>
-						<span class="lp-resultTitle_inner"><img src="/data/hidari-kikino-eren/images/result_title2.png" alt=""></span>
+						<span class="lp-resultTitle_inner mod-displayNone_smallDesktop"><img src="/data/hidari-kikino-eren/images/result_title1.png" alt=""></span>
+						<span class="lp-resultTitle_inner mod-displayNone_smallDesktop"><img src="/data/hidari-kikino-eren/images/result_title2.png" alt=""></span>
+						<span class="lp-resultTitle_inner mod-displayNone_mobile"><img src="/data/hidari-kikino-eren/images/result_title_l.png" alt=""></span>
 					</h2>
 					<div class="lp-resultDesc">
 						<p class="lp-resultDesc_line mod-displayNone_smallDesktop">10/20〜10/28の投票期間で</p>
