テキストフェードイン完了

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -183,7 +183,7 @@
 							<p class="lp-summery_descLine">広告では表現できないことも多い。</p>
 							<p class="lp-summery_descLine mod-displayNone_smallDesktop">混迷を極める状況のなか、</p>
 							<p class="lp-summery_descLine mod-displayNone_smallDesktop">二つのチームが出した企画とはー。</p>
-							<p class="lp-summery_descLine mod-displayNone_mobile mod-aiueo">混迷を極める状況のなか、二つのチームが出した企画とはー。</p>
+							<p class="lp-summery_descLine mod-displayNone_mobile">混迷を極める状況のなか、二つのチームが出した企画とはー。</p>
 						</div>
 					</div>
 				</div>
