--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -45,7 +45,7 @@
 		<div class="lp-loading js-loading" id="scroll-to-div-id-anchor">
 			<div class="lp-loading_wrap js-loadingWrap">
 				<div class="lp-loadingInner">
-					<div class="lp-loadingInner_item mod-item1 js-progressGauge js-scaleItem"></div>
+					<div class="lp-loadingInner_item mod-item1 js-scaleItem"></div>
 					<div class="lp-loadingInner_item mod-item2 js-scaleItem"></div>
 					<div class="lp-loadingInner_item mod-item3 js-scaleItem"></div>
 					<div class="lp-loadingInner_item mod-item4 js-scaleItem"></div>
