--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -195,8 +195,10 @@
 								<img src="/data/hidari-kikino-eren/images/summary_relationship.jpg" alt="">
 							</picture>
 						</figure>
-						<div>
-							
+						<div class="buttonSquare">
+							<div class="buttonSquare_inner">
+								<img src="/data/hidari-kikino-eren/images/summary_icon_zoom.png" alt="">
+							</div>
 						</div>
 					</a>
 				</div>
@@ -326,6 +328,20 @@
 			<li><img src="/data/hidari-kikino-eren/images/test/06.png" alt=""></li>
 		</ul> -->
 	</div>
+	<div class="lp-modal">
+		<button class="buttonSquare">
+			<span class="buttonSquare_inner"></span>
+		</button>
+		<div class="lp-modalContents">
+			<p class="lp-modalContents_title">
+				<span class="lp-modalContents_titleInner"><img src="/data/hidari-kikino-eren/images/modal_title.png" alt=""></span>
+			</p>
+			<div class="lp-modalContentsInner">
+				<img src="/data/hidari-kikino-eren/images/summary_chart_zoom.jpg" alt="">
+			</div>
+		</div>
+	</div>
+	<div class="lp-modalBg"></div>
 	<script type="text/javascript" src="../../lib/jquery-3.4.1.min.js"></script>
 	<script type="text/javascript" src="../../src/js/hidari-kikino-eren/index.js"></script>
 </body>
