style整理,buttonSquere実装,opening改良

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -70,36 +70,36 @@
 			<div class="lp-menu_wrap">
 				<nav class="lp-menu_nav">
 					<ul>
-						<li class="btn mod-animeV mod-vText js-menuNav">
-							<a class="btn_inner" href="">
-								<span class="btn_label">トップ</span>
-								<svg><use xlink:href="#arrow"></svg>
+						<li class="buttonSquare mod-animeV mod-vText js-menuNav">
+							<a class="buttonSquare_inner" href="">
+								<span class="buttonSquare_label">トップ</span>
+								<svg class="buttonSquare_leftArrow"><use xlink:href="#arrow"></svg>
 							</a>
 						</li>
-						<li class="btn mod-animeV mod-vText js-menuNav">
-							<a class="btn_inner" href="">
-								<span class="btn_label">あらすじ</span>
-								<svg><use xlink:href="#arrow"></svg>
+						<li class="buttonSquare mod-animeV mod-vText js-menuNav">
+							<a class="buttonSquare_inner" href="">
+								<span class="buttonSquare_label">あらすじ</span>
+								<svg class="buttonSquare_leftArrow"><use xlink:href="#arrow"></svg>
 							</a>
 						</li>
-						<li class="btn mod-animeV mod-vText js-menuNav">
-							<a class="btn_inner" href="">
-								<span class="btn_label">ストーリー</span>
-								<svg><use xlink:href="#arrow"></svg>
+						<li class="buttonSquare mod-animeV mod-vText js-menuNav">
+							<a class="buttonSquare_inner" href="">
+								<span class="buttonSquare_label">ストーリー</span>
+								<svg class="buttonSquare_leftArrow"><use xlink:href="#arrow"></svg>
 							</a>
 						</li>
-						<li class="btn mod-animeV mod-vote mod-vText js-menuNav">
-							<a class="btn_inner" href="">
-								<span class="btn_label">投票結果</span>
-								<svg class="btn_icon"><use xlink:href="#arrow"></svg>
+						<li class="buttonSquare mod-animeV mod-vote mod-vText js-menuNav">
+							<a class="buttonSquare_inner" href="">
+								<span class="buttonSquare_label">投票結果</span>
+								<svg class="buttonSquare_leftArrow"><use xlink:href="#arrow"></svg>
 							</a>
 						</li>
 					</ul>
 				</nav>
 				<div class="lp-menu_sns">
-					<button class="btn mod-animeH"><svg class="btn_icon"><use xlink:href="#iconTwitter"></svg></button>
-					<button class="btn mod-animeH"><svg class="btn_icon"><use xlink:href="#iconFacebook"></svg></button>
-					<button class="btn mod-animeH"><svg class="btn_icon"><use xlink:href="#iconLine"></svg></button>
+					<button class="buttonSquare mod-animeH"><svg class="buttonSquare_squareIcon"><use xlink:href="#iconTwitter"></svg></button>
+					<button class="buttonSquare mod-animeH"><svg class="buttonSquare_squareIcon"><use xlink:href="#iconFacebook"></svg></button>
+					<button class="buttonSquare mod-animeH"><svg class="buttonSquare_squareIcon"><use xlink:href="#iconLine"></svg></button>
 				</div>
 			</div>
 		</div>
@@ -158,9 +158,6 @@
 							<p class="lp-summery_descLine mod-displayNone_mobile">混迷を極める状況のなか、二つのチームが出した企画とはー。</p>
 						</div>
 					</div>
-				</div>
-				<div class="btn mod-animeH">
-					<div class="btn_inner"><span>kkk</span></div>
 				</div>
 				<div class="lp-summery_relation js-relation">
 					<div>
