--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -228,7 +228,7 @@
 								<svg>
 									<use xlink:href="#arrow">
 								</svg>
-								<span class="lp-story_label brn_inner">プロローグ<br class="mod-displayNone_smallDesktop"><span>「新聞広告の日<br>THE NEWS FOR NEW TEAM」</span></span>
+								<span class="lp-story_label brn_inner">プロローグ<br><span>「新聞広告の日<br class="mod-displayNone_smallDesktop">THE NEWS FOR NEW TEAM」</span></span>
 							</div>
 						</button>
 						<button class="lp-story_tab js-tab">
@@ -236,7 +236,7 @@
 								<svg>
 									<use xlink:href="#arrow">
 								</svg>
-								<span class="lp-story_label">本編<br class="mod-displayNone_smallDesktop"><span>「新聞広告の日<br>THE NEWS FOR NEW TEAM」</span></span>
+								<span class="lp-story_label">本編<br><span>「新聞広告の日<br class="mod-displayNone_smallDesktop">THE NEWS FOR NEW TEAM」</span></span>
 							</div>
 						</button>
 					</div>
