--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -132,18 +132,18 @@
 					</li>
 				</ul>
 				<h1>
-					<span class="lp-kv_title mod-title1"><img src="/data/hidari-kikino-eren/images/kv_title1.png" alt=""></span>
-					<span class="lp-kv_title mod-title2"><img src="/data/hidari-kikino-eren/images/kv_title2.png" alt=""></span>
+					<span class="lp-kv_title mod-title1"><img src="/data/hidari-kikino-eren/images/kv_title1.png" loading="eager" alt=""></span>
+					<span class="lp-kv_title mod-title2"><img src="/data/hidari-kikino-eren/images/kv_title2.png" loading="eager" alt=""></span>
 				</h1>
 				<div class="lp-kv_name">
-					<img src="/data/hidari-kikino-eren/images/kv_names.png" alt="朝日新聞社 ✕ 左利きのエレン Powered by JINS">
+					<img src="/data/hidari-kikino-eren/images/kv_names.png" loading="eager" alt="朝日新聞社 ✕ 左利きのエレン Powered by JINS">
 				</div>
 			</section>
 
 			<section class="lp-summery">
 				<div class="lp-summery_heading js-fadeIn">
 					<div class="lp-summery_headingInner">
-						<h2 class="lp-summery_title"><img src="/data/hidari-kikino-eren/images/summary_title.png" alt=""></h2>
+						<h2 class="lp-summery_title"><img src="/data/hidari-kikino-eren/images/summary_title.png" loading="eager" alt=""></h2>
 						<div class="lp-summery_headingDesc">
 							<p class="lp-summery_descLine">目黒広告社の朝倉CDのもとに、</p>
 							<p class="lp-summery_descLine">日本を代表するアイウエアカンパニーJINSから、</p>
@@ -164,12 +164,12 @@
 						<figure>
 							<picture>
 								<source srcset="/data/hidari-kikino-eren/images/summary_relation_l.jpg" media="(min-width: 800px)">
-								<img src="/data/hidari-kikino-eren/images/summary_relation.jpg" alt="">
+								<img src="/data/hidari-kikino-eren/images/summary_relation.jpg" loading="eager" alt="">
 							</picture>
 						</figure>
 						<div class="buttonSquare mod-animeH">
 							<div class="buttonSquare_inner">
-								<img src="/data/hidari-kikino-eren/images/summary_icon_zoom.png" alt="">
+								<img src="/data/hidari-kikino-eren/images/summary_icon_zoom.png" loading="eager" alt="">
 							</div>
 						</div>
 					</a>
@@ -198,28 +198,49 @@
 					</div>
 					<div class="lp-story_wrap"> 
 						<ol class="lp-story_pages mod-prologue js-pages is-active">
-							<li><img src="/data/hidari-kikino-eren/images/prologue/01.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/prologue/02.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/prologue/03.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/prologue/04.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/prologue/05.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/prologue/06.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/prologue/07.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/prologue/08.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/prologue/09.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/prologue/10.png" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/01.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/02.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/03.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/04.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/05.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/06.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/07.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/08.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/09.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/10.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/11.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/12.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/13.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/14.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/15.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/16.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/17.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/18.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/19.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/20.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/21.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/22.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/prologue/23.png" loading="eager" alt=""></li>
 						</ol>
 						<ol class="lp-story_pages mod-main js-pages">
-							<li><img src="/data/hidari-kikino-eren/images/main/01.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/main/02.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/main/03.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/main/04.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/main/05.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/main/06.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/main/07.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/main/08.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/main/09.png" alt=""></li>
-							<li><img src="/data/hidari-kikino-eren/images/main/10.png" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/01.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/02.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/03.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/04.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/05.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/06.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/07.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/08.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/09.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/10.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/11.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/12.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/13.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/14.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/15.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/16.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/17.png" loading="eager" alt=""></li>
+							<li><img src="/data/hidari-kikino-eren/images/main/18.png" loading="eager" alt=""></li>
 						</ol>
 					</div>
 					<div class="lp-story_tabs mod-bottomTab">
@@ -250,9 +271,9 @@
 				</div>
 				<div class="lp-result_inner js-fadeIn">
 					<h2 class="lp-resultTitle">
-						<span class="lp-resultTitle_inner mod-displayNone_smallDesktop"><img src="/data/hidari-kikino-eren/images/result_title1.png" alt=""></span>
-						<span class="lp-resultTitle_inner mod-displayNone_smallDesktop"><img src="/data/hidari-kikino-eren/images/result_title2.png" alt=""></span>
-						<span class="lp-resultTitle_inner mod-displayNone_mobile"><img src="/data/hidari-kikino-eren/images/result_title_l.png" alt=""></span>
+						<span class="lp-resultTitle_inner mod-displayNone_smallDesktop"><img src="/data/hidari-kikino-eren/images/result_title1.png" loading="eager" alt=""></span>
+						<span class="lp-resultTitle_inner mod-displayNone_smallDesktop"><img src="/data/hidari-kikino-eren/images/result_title2.png" loading="eager" alt=""></span>
+						<span class="lp-resultTitle_inner mod-displayNone_mobile"><img src="/data/hidari-kikino-eren/images/result_title_l.png" loading="eager" alt=""></span>
 					</h2>
 					<div class="lp-resultDesc">
 						<p class="lp-resultDesc_line mod-displayNone_smallDesktop">10/20〜10/28の投票期間で</p>
@@ -264,19 +285,19 @@
 						<p class="lp-resultDesc_line mod-displayNone_mobile">みなさんの投票の結果、採用されたのは「目黒広告社」の広告でした!</p>
 						<p class="lp-resultDesc_line mod-displayNone_mobile">実際の掲載を楽しみにしていてください。</p>
 					</div>
-					<div class="lp-resultLogo"><img src="/data/hidari-kikino-eren/images/result_logo_meguro.png" alt=""></div>
-					<div class="lp-resultImg1"><img src="/data/hidari-kikino-eren/images/result_img1.png" alt=""></div>
-					<div class="lp-resultImg2"><img src="/data/hidari-kikino-eren/images/result_img2.png" alt=""></div>
+					<div class="lp-resultLogo"><img src="/data/hidari-kikino-eren/images/result_logo_meguro.png" loading="eager" alt=""></div>
+					<div class="lp-resultImg1"><img src="/data/hidari-kikino-eren/images/result_img1.png" loading="eager" alt=""></div>
+					<div class="lp-resultImg2"><img src="/data/hidari-kikino-eren/images/result_img2.png" loading="eager" alt=""></div>
 					<div class="lp-resultDate">
 						<p class="lp-resultDate_label">
 							<picture>
 								<source srcset="/data/hidari-kikino-eren/images/result_info_label_l.png" media="(min-width: 800px)">
-								<img src="/data/hidari-kikino-eren/images/result_info_label.png" alt=""></p>
+								<img src="/data/hidari-kikino-eren/images/result_info_label.png" loading="eager" alt=""></p>
 							</picture>
 						<p class="lp-resultDate_day">
 							<picture>
 								<source srcset="/data/hidari-kikino-eren/images/result_date_l.png" media="(min-width: 800px)">
-								<img src="/data/hidari-kikino-eren/images/result_date.png" alt="">
+								<img src="/data/hidari-kikino-eren/images/result_date.png" loading="eager" alt="">
 							</picture>
 						</p>
 					</div>
@@ -284,21 +305,6 @@
 			</section>
 
 		</main>
-
-		<!-- <ul class="js-test">
-			<li><img src="/data/hidari-kikino-eren/images/test/01 (1).png" alt=""></li>
-			<li><img src="/data/hidari-kikino-eren/images/test/01.png" alt=""></li>
-			<li><img src="/data/hidari-kikino-eren/images/test/02 (1).png" alt=""></li>
-			<li><img src="/data/hidari-kikino-eren/images/test/02.png" alt=""></li>
-			<li><img src="/data/hidari-kikino-eren/images/test/03 (1).png" alt=""></li>
-			<li><img src="/data/hidari-kikino-eren/images/test/03.png" alt=""></li>
-			<li><img src="/data/hidari-kikino-eren/images/test/04 (1).png" alt=""></li>
-			<li><img src="/data/hidari-kikino-eren/images/test/04.png" alt=""></li>
-			<li><img src="/data/hidari-kikino-eren/images/test/05 (1).png" alt=""></li>
-			<li><img src="/data/hidari-kikino-eren/images/test/05.png" alt=""></li>
-			<li><img src="/data/hidari-kikino-eren/images/test/06 (1).png" alt=""></li>
-			<li><img src="/data/hidari-kikino-eren/images/test/06.png" alt=""></li>
-		</ul> -->
 	</div>
 	<div class="lp-modal js-modal" data-modal="modalClose">
 		<button class="buttonSquare mod-animeH">
@@ -306,10 +312,10 @@
 		</button>
 		<div class="lp-modalContents">
 			<p class="lp-modalContents_title">
-				<span class="lp-modalContents_titleInner"><img src="/data/hidari-kikino-eren/images/modal_title.png" alt=""></span>
+				<span class="lp-modalContents_titleInner"><img src="/data/hidari-kikino-eren/images/modal_title.png" loading="eager" alt=""></span>
 			</p>
 			<div class="lp-modalContentsInner">
-				<img src="/data/hidari-kikino-eren/images/summary_chart_zoom.jpg" alt="">
+				<img src="/data/hidari-kikino-eren/images/summary_chart_zoom.jpg" loading="eager" alt="">
 			</div>
 		</div>
 	</div>
